--- a/src/assets/css/_products.sass
+++ b/src/assets/css/_products.sass
@@ -21,7 +21,16 @@
   &:hover
     box-shadow: 3px 3px 6px
     cursor: pointer
-  img, h1
+  &-image-wrapper
+    width: 80%
+    height: 40%
+    overflow: hidden
+    display: flex
+    justify-content: center
+    align-items: center
+  img
+    width: 100%
+    height: auto
     &:hover
       cursor: pointer
   hr
