--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,43 +2,53 @@
   font-weight: 600;
   margin-bottom: 10px;
   color: White;
-  text-align: center; }
+  text-align: center;
+}
 #header hr {
   border-color: White;
   width: 250px;
-  text-align: center; }
+  text-align: center;
+}
 
 #tienda-de {
   font-size: x-large;
   font-family: Monotype Corsiva;
-  margin-right: 200px; }
+  margin-right: 200px;
+}
 
 #pianos-electricos,
 #casa-ramirez {
   font-size: -webkit-xxx-large;
-  font-family: Algerian; }
+  font-family: Algerian;
+}
 
 #pianos-electricos {
-  margin-bottom: 50px !important; }
+  margin-bottom: 50px !important;
+}
 
 #casa-ramirez {
   letter-spacing: 1px;
-  margin: 50px !important; }
+  margin: 50px !important;
+}
 
 .btn-sort {
-  margin: 5px 5px 5px 5px; }
+  margin: 5px 5px 5px 5px;
+}
 
 #filtrar-por {
-  margin-bottom: -20px; }
+  margin-bottom: -20px;
+}
 
 .filter-text {
   text-align: left;
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 .form-control {
   margin-top: -20px;
   margin-bottom: -20px;
-  border: inset; }
+  border: inset;
+}
 
 #products {
   width: 100%;
@@ -46,7 +56,8 @@
   padding: 20px !important;
   display: grid;
   grid-gap: 10px 10px;
-  grid-template-columns: repeat(1, 1fr); }
+  grid-template-columns: repeat(1, 1fr);
+}
 
 .product-container {
   border-radius: 2%;
@@ -58,52 +69,81 @@
   margin: 5px 5px 5px 5px;
   padding: 10px;
   text-align: justify;
-  color: Black; }
-  .product-container:hover {
-    box-shadow: 3px 3px 6px;
-    cursor: pointer; }
-  .product-container img:hover, .product-container h1:hover {
-    cursor: pointer; }
-  .product-container hr {
-    color: Black;
-    width: 100px;
-    margin: auto;
-    margin-bottom: 5px; }
+  color: Black;
+}
+.product-container:hover {
+  box-shadow: 3px 3px 6px;
+  cursor: pointer;
+}
+.product-container-image-wrapper {
+  width: 80%;
+  height: 40%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-container img {
+  width: 100%;
+  height: auto;
+}
+.product-container img:hover {
+  cursor: pointer;
+}
+.product-container hr {
+  color: Black;
+  width: 100px;
+  margin: auto;
+  margin-bottom: 5px;
+}
 
 .cursor-pointer {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 @media screen and (min-width: 600px) {
   #products {
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 @media screen and (min-width: 900px) {
   #products {
-    grid-template-columns: repeat(3, 1fr); } }
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media screen and (min-width: 1200px) {
   #products {
-    grid-template-columns: repeat(4, 1fr); } }
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 @media screen and (min-width: 1400px) {
   #products {
-    grid-template-columns: repeat(5, 1fr); } }
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
 .footer-text {
   color: White;
   cursor: default;
   line-height: 20px;
-  letter-spacing: 0.8px; }
+  letter-spacing: 0.8px;
+}
 
 .footer-right {
-  text-align: right; }
+  text-align: right;
+}
 
 .footer-icons {
   margin-left: 20px;
-  color: White; }
+  color: White;
+}
 
 .grid {
   width: 100%;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-areas: "header header header header" "filter filter filter filter" "products products products products" "footer footer footer footer"; }
+  grid-template-areas: "header header header header" "filter filter filter filter" "products products products products" "footer footer footer footer";
+}
 
 #header {
   background: blue;
@@ -114,53 +154,65 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  grid-area: header; }
+  grid-area: header;
+}
 
 #filter {
   background: LightGrey;
-  grid-area: filter; }
+  grid-area: filter;
+}
 
 #products {
   background: LightGrey;
-  grid-area: products; }
+  grid-area: products;
+}
 
 #footer {
   background: #243a51;
-  grid-area: footer; }
+  grid-area: footer;
+}
 
 @media screen and (min-width: 500px) {
   .grid {
     min-width: 300px;
-    grid-template-areas: "header header header header" "filter products products products" "footer footer footer footer"; } }
+    grid-template-areas: "header header header header" "filter products products products" "footer footer footer footer";
+  }
+}
 #header, #filter, #products, #footer {
-  padding: 50px 15%; }
+  padding: 50px 15%;
+}
 
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 h1, h3 {
   font-family: "Cardo", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 32px;
   color: Black;
   text-align: center;
-  cursor: default; }
+  cursor: default;
+}
 
 h4, p {
   color: DimGrey;
   letter-spacing: 1px;
   text-align: center;
-  cursor: default; }
+  cursor: default;
+}
 
 h5 {
-  color: DimGrey; }
+  color: DimGrey;
+}
 
 p {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   margin: 0 0 11px;
   line-height: 24px;
-  text-align: justify; }
+  text-align: justify;
+}
 
 /*# sourceMappingURL=index.css.map */
